fix header
Header was far too wide on mobile devices (not on desktop sim). Hoping this will fix the issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,7 @@ nav{
 
 .logo_banner{
     display: flex;    
+    max-width: 100%;
 }
 
 .site_name{
